@@ -27,6 +27,9 @@ Package org.springframework.osgi.extender
 Package org.springframework.osgi.mock
 * added case insensitive filter comparison to avoid different behaviours between OSGi platforms
 
+Package org.springframework.osgi.web
+* improved encoding of nested context paths
+
 
 Changes in version 1.2.0 final (2009-04-09)
 -------------------------------------------
